fix path to close svg, change it's size fo bigger, fix sizes of backdrop form on tablet and PC

--- a/src/css/feedback-modal.css
+++ b/src/css/feedback-modal.css
@@ -206,15 +206,4 @@ body.no-scroll {
 
 .feedback-modal-star .star-on-png::before {
   content: url('../img/filled-star-feedbeck.svg');
-
-  /* content: url('../img/icons.svg/#icon-fill-star'); */
-}
-
-/* .feedback-modal-star i {
-  font-size: 32px !important;
-  line-height: 1;
-} */
-.feedback-modal-star > i {
-  /* font-size: 1em;
-  height: 36px; */
 }
